data/derived/comb/progs/unify/prog7005.ml.out
Characters 156-166:
  in wwhile((go, true), b);;
            ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
